client/src/StyleSheets/index.css
@import url(../StyleSheets/App.css);
*,
*::before,
*::after {
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
}
body::before {
	content: '';
	position: fixed;
	min-height: 100vh;
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	z-index: -1;
	background: url(../../src/images/1.jpg);
	filter: invert(94%);
	background-position-y: center;
	background-position-x: center;
	background-size: cover;
}
body {
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
		sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	color: white;
}

